@@ -18,6 +18,9 @@ Changelog
   v3.1.2, but it was only fixed there for compressed image HDUs and not for
   binary tables in general.
 
+- Fixed an obscure issue that can occur on systems that don't have flush to
+  memory-mapped files implemented (namely GNU Hurd). (Backported from 3.2)
+
 
 3.0.12 (unreleased)
 -------------------
@@ -35,6 +38,9 @@ Changelog
   the max array length parameter of the format).  This was thought fixed in
   v3.1.2, but it was only fixed there for compressed image HDUs and not for
   binary tables in general. (Backported from 3.1.3)
+
+- Fixed an obscure issue that can occur on systems that don't have flush to
+  memory-mapped files implemented (namely GNU Hurd). (Backported from 3.2)
 
 
 3.1.2 (2013-04-22)
